[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acrwkr"
version = "0.1.0"
description = "This is a project for CS 546 - Advanced NLP"
readme = "README.rst"
authors = [
  {name = "Abhijith Nagarajan", email = "an80@illinois.edu"}
]
maintainers = [
  {name = "Abhijith Nagarajan", email = "an80@illinois.edu"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Abhijith-Nagarajan/acrwkr/issues"
changelog = "https://github.com/Abhijith-Nagarajan/acrwkr/blob/master/changelog.md"
homepage = "https://github.com/Abhijith-Nagarajan/acrwkr"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

